Updated to sync with latest picks list

--- a/bowl_pool/test/2015-2016/rankings.html
+++ b/bowl_pool/test/2015-2016/rankings.html
@@ -342,78 +342,79 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2015-12-29 16:08:30</em></div>
+<div class="line"><em>Last updated:  2015-12-29 17:48:04</em></div>
 <div class="line"><em>Last bowl scored:  QUICK LANE BOWL (Minnesota vs. Central Michigan)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. BROCOHILI !!!!! 14.25</div>
-<div class="line">2. Yellowstone  13.0</div>
-<div class="line">3. HAM BEAST 12.75</div>
-<div class="line">4. GUAC BOYZ 12.0</div>
-<div class="line">4. Devil's Tower 12.0</div>
-<div class="line">4. Corgidawg 12.0</div>
-<div class="line">7. Blind Prognosticators 11.75</div>
-<div class="line">7. Beaver Believer 11.75</div>
-<div class="line">9. <strong>Rocket Surgeon 11.5</strong></div>
-<div class="line">9. GODIVA 11.5</div>
-<div class="line">9. Cowboy 11.5</div>
-<div class="line">12. Texas Women 11.25</div>
-<div class="line">12. <strong>JessePinkman 11.25</strong></div>
-<div class="line">12. Going Bowling 11.25</div>
-<div class="line">15. Shi boa 11.0</div>
-<div class="line">15. LumberSexual 11.0</div>
-<div class="line">15. Jake &amp; the Neverland Pirates 11.0</div>
-<div class="line">15. EL CAPITAN 11.0</div>
-<div class="line">19. Opposite of Dad 10.75</div>
-<div class="line">19. FF  10.75</div>
-<div class="line">21. Trollotopia 10.5</div>
-<div class="line">21. Spiker 10.5</div>
-<div class="line">21. KROB15 10.5</div>
-<div class="line">21. Hui Mama 10.5</div>
-<div class="line">21. Eclipse 10.5</div>
-<div class="line">26. Lucky in 2016 10.25</div>
-<div class="line">26. Hou Dat 10.25</div>
-<div class="line">26. Cotton Headed Ninny Muggins 10.25</div>
-<div class="line">26. <strong>Captain 10.25</strong></div>
-<div class="line">30. HALF DOME 10.0</div>
-<div class="line">31. Texsons 9.75</div>
-<div class="line">31. Clairvoyantsmith 9.75</div>
-<div class="line">33. Tan Mei yi&nbsp; 9.5</div>
-<div class="line">33. Pooh 9.5</div>
-<div class="line">33. Oregon Okie 9.5</div>
-<div class="line">33. Hunter 55 9.5</div>
-<div class="line">33. Go Frogs 9.5</div>
-<div class="line">51. FIELDS OF WHEAT 9.5</div>
-<div class="line">39. West Coast Bias 9.25</div>
-<div class="line">39. TTRedRaider09 9.25</div>
-<div class="line">39. Slave Darby 9.25</div>
-<div class="line">39. <strong>D-bo 9.25</strong></div>
-<div class="line">43. Perfect Spiral 9.0</div>
-<div class="line">43. Beach Bum 9.0</div>
-<div class="line">45. Trojans 8.75</div>
-<div class="line">45. Texas State 8.75</div>
-<div class="line">47. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 8.25</div>
-<div class="line">47. Spartans 8.25</div>
-<div class="line">47. Gussysue 8.25</div>
-<div class="line">50. Sure Thing 7.75</div>
-<div class="line">51. The Force Awakens 7.5</div>
-<div class="line">51. <strong>Surf 7.5</strong></div>
-<div class="line">51. FIELDS OF WHEAT 7.5</div>
-<div class="line">51. Billy Bad 2nd 7.5</div>
-<div class="line">51. Billy Bad 7.5</div>
-<div class="line">56. Team Aaron 7.25</div>
-<div class="line">56. Groodle 7.25</div>
-<div class="line">58. Santa Cruz Bill 7.0</div>
-<div class="line">58. <strong>Mama Bear 7.0</strong></div>
-<div class="line">60. Magnitogorsk 6.75</div>
-<div class="line">61. Frog Man 4Ever 6.5</div>
-<div class="line">61. Deakins 6.5</div>
-<div class="line">63. Yoda 6.25</div>
-<div class="line">64. Aggies 6.0</div>
-<div class="line">65. Julia 5.75</div>
-<div class="line">66. GMen 5.5</div>
-<div class="line">67. Bernie Trump 5.0</div>
-<div class="line">68. COUGAR 4.75</div>
+<div class="line">1. Santa Cruz Bill 14.5</div>
+<div class="line">2. BROCOHLI !!!!! 14.25</div>
+<div class="line">3. Yellowstone  13.0</div>
+<div class="line">4. HAM BEAST 12.75</div>
+<div class="line">5. GUAC BOYZ 12.0</div>
+<div class="line">5. Devil's Tower 12.0</div>
+<div class="line">5. Corgidawg 12.0</div>
+<div class="line">8. Blind Prognosticators 11.75</div>
+<div class="line">8. Beaver Believer 11.75</div>
+<div class="line">10. <strong>Rocket Surgeon 11.5</strong></div>
+<div class="line">10. GODIVA 11.5</div>
+<div class="line">10. Cowboy 11.5</div>
+<div class="line">10. Beach Bum 11.5</div>
+<div class="line">14. Texas Women 11.25</div>
+<div class="line">14. <strong>JessePinkman 11.25</strong></div>
+<div class="line">14. Going Bowling 11.25</div>
+<div class="line">17. Shi boa 11.0</div>
+<div class="line">17. POPO 11.0</div>
+<div class="line">17. LumberSexual 11.0</div>
+<div class="line">17. Jake &amp; the Neverland Pirates 11.0</div>
+<div class="line">17. EL CAPITAN 11.0</div>
+<div class="line">22. Opposite of Dad 10.75</div>
+<div class="line">22. FF  10.75</div>
+<div class="line">24. Trollotopia 10.5</div>
+<div class="line">24. Spiker 10.5</div>
+<div class="line">24. KROB15 10.5</div>
+<div class="line">24. Hui Mama 10.5</div>
+<div class="line">24. Eclipse 10.5</div>
+<div class="line">29. Lucky in 2016 10.25</div>
+<div class="line">29. Hou Dat 10.25</div>
+<div class="line">29. Cotton Headed Ninny Muggins 10.25</div>
+<div class="line">29. <strong>Captain 10.25</strong></div>
+<div class="line">33. HALF DOME 10.0</div>
+<div class="line">34. Texsons 9.75</div>
+<div class="line">34. Clairvoyantsmith 9.75</div>
+<div class="line">36. Tan Mei yi&nbsp; 9.5</div>
+<div class="line">36. Pooh 9.5</div>
+<div class="line">36. Oregon Okie 9.5</div>
+<div class="line">36. Hunter 55 9.5</div>
+<div class="line">36. Go Frogs 9.5</div>
+<div class="line">36. FIELDS OF WHEAT 9.5</div>
+<div class="line">42. West Coast Bias 9.25</div>
+<div class="line">42. TTRedRaider09 9.25</div>
+<div class="line">42. Slave Darby 9.25</div>
+<div class="line">42. <strong>D-bo 9.25</strong></div>
+<div class="line">46. Perfect Spiral 9.0</div>
+<div class="line">46. BUBBA 9.0</div>
+<div class="line">48. Trojans 8.75</div>
+<div class="line">48. Texas State 8.75</div>
+<div class="line">50. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 8.25</div>
+<div class="line">50. Spartans 8.25</div>
+<div class="line">50. Gussysue 8.25</div>
+<div class="line">53. Julia 8.0</div>
+<div class="line">54. Sure Thing 7.75</div>
+<div class="line">55. The Force Awakens 7.5</div>
+<div class="line">55. <strong>Surf 7.5</strong></div>
+<div class="line">55. Billy Bad 2nd 7.5</div>
+<div class="line">55. Billy Bad 7.5</div>
+<div class="line">59. Team Aaron 7.25</div>
+<div class="line">59. Groodle 7.25</div>
+<div class="line">61. <strong>Mama Bear 7.0</strong></div>
+<div class="line">62. Magnitogorsk 6.75</div>
+<div class="line">63. Frog Man 4Ever 6.5</div>
+<div class="line">63. Deakins 6.5</div>
+<div class="line">65. Yoda 6.25</div>
+<div class="line">66. COUGAR 6.0</div>
+<div class="line">66. Aggies 6.0</div>
+<div class="line">68. GMen 5.5</div>
+<div class="line">69. Bernie Trump 5.0</div>
 </div>
 </div>
 </body>
