Updated to sync with latest picks list (again)

--- a/bowl_pool/2015-2016/results.html
+++ b/bowl_pool/2015-2016/results.html
@@ -416,6 +416,7 @@ ul.auto-toc {
 <col width="1%" />
 <col width="1%" />
 <col width="1%" />
+<col width="1%" />
 </colgroup>
 <thead valign="bottom">
 <tr><th class="head">ID</th>
@@ -430,7 +431,8 @@ ul.auto-toc {
 <th class="head">Billy Bad</th>
 <th class="head">Billy Bad 2nd</th>
 <th class="head">Blind Prognosticators</th>
-<th class="head">BROCOHILI !!!!!</th>
+<th class="head">BROCOHLI !!!!!</th>
+<th class="head">BUBBA</th>
 <th class="head">Captain</th>
 <th class="head">Clairvoyantsmith</th>
 <th class="head">Corgidawg</th>
@@ -443,7 +445,6 @@ ul.auto-toc {
 <th class="head">Eclipse</th>
 <th class="head">EL CAPITAN</th>
 <th class="head">FF</th>
-<th class="head">FIELDS OF WHEAT</th>
 <th class="head">FIELDS OF WHEAT</th>
 <th class="head">Frog Man 4Ever</th>
 <th class="head">GMen</th>
@@ -470,6 +471,7 @@ ul.auto-toc {
 <th class="head">Oregon Okie</th>
 <th class="head">Perfect Spiral</th>
 <th class="head">Pooh</th>
+<th class="head">POPO</th>
 <th class="head">Rocket Surgeon</th>
 <th class="head">Santa Cruz Bill</th>
 <th class="head">Shi boa</th>
@@ -508,32 +510,8 @@ ul.auto-toc {
 <td>0.0</td>
 <td>1.5</td>
 <td>0.0</td>
-<td>1.5</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
 <td>0.0</td>
 <td>1.5</td>
-<td>0.0</td>
-<td>1.5</td>
-<td>1.5</td>
-<td>1.5</td>
-<td>1.5</td>
-<td>0.0</td>
-<td>1.5</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>1.5</td>
-<td>0.0</td>
-<td>1.5</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -543,9 +521,34 @@ ul.auto-toc {
 <td>1.5</td>
 <td>0.0</td>
 <td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -590,35 +593,36 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
-<td>1.25</td>
-<td>0.0</td>
-<td>1.25</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>1.25</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
 <td>0.0</td>
 <td>1.25</td>
 <td>0.0</td>
 <td>1.25</td>
-<td>1.25</td>
-<td>1.25</td>
-<td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>1.25</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
 <td>1.25</td>
 <td>1.25</td>
 <td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
 <td>1.25</td>
 <td>1.25</td>
 <td>1.25</td>
@@ -656,15 +660,15 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
-<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
@@ -694,8 +698,9 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
-<td>0.0</td>
 <td>1.0</td>
+<td>0.0</td>
+<td>2.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
@@ -729,19 +734,19 @@ ul.auto-toc {
 <td>0.0</td>
 <td>2.0</td>
 <td>2.0</td>
-<td>2.0</td>
-<td>0.0</td>
-<td>2.0</td>
-<td>2.0</td>
 <td>0.0</td>
 <td>2.0</td>
 <td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>2.0</td>
-<td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -768,6 +773,7 @@ ul.auto-toc {
 <td>0.0</td>
 <td>2.0</td>
 <td>2.0</td>
+<td>0.0</td>
 <td>2.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -804,14 +810,14 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>1.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
@@ -842,6 +848,7 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
@@ -877,6 +884,7 @@ ul.auto-toc {
 <td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
+<td>0.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
@@ -888,7 +896,6 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
-<td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
@@ -916,6 +923,7 @@ ul.auto-toc {
 <td>0.0</td>
 <td>1.0</td>
 <td>2.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
 <td>1.0</td>
@@ -944,44 +952,11 @@ ul.auto-toc {
 <td>Connecticut</td>
 <td>4.0</td>
 <td>1.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
 <td>0.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>0.0</td>
-<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>1.0</td>
@@ -990,8 +965,42 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>1.0</td>
@@ -1018,14 +1027,15 @@ ul.auto-toc {
 <td>Miami</td>
 <td>2.5</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
 <td>2.0</td>
 <td>1.0</td>
 <td>0.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>2.0</td>
-<td>0.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
@@ -1036,7 +1046,6 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
-<td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -1054,18 +1063,19 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>1.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
@@ -1101,45 +1111,46 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
-<td>2.0</td>
-<td>1.0</td>
-<td>0.0</td>
-<td>2.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>0.0</td>
 <td>1.0</td>
 <td>2.0</td>
 <td>1.0</td>
-<td>0.0</td>
 <td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>0.0</td>
-<td>0.0</td>
 <td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
 <td>2.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>2.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
@@ -1173,8 +1184,6 @@ ul.auto-toc {
 <td>1.25</td>
 <td>1.25</td>
 <td>0.0</td>
-<td>1.25</td>
-<td>1.25</td>
 <td>0.0</td>
 <td>1.25</td>
 <td>1.25</td>
@@ -1184,6 +1193,8 @@ ul.auto-toc {
 <td>0.0</td>
 <td>1.25</td>
 <td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -1202,15 +1213,16 @@ ul.auto-toc {
 <td>1.25</td>
 <td>1.25</td>
 <td>1.25</td>
-<td>1.25</td>
-<td>0.0</td>
-<td>1.25</td>
-<td>1.25</td>
-<td>1.25</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
 <td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
 <td>1.25</td>
 <td>1.25</td>
 <td>1.25</td>
@@ -1240,43 +1252,43 @@ ul.auto-toc {
 <td>Tulsa</td>
 <td>13.5</td>
 <td>2.0</td>
-<td>0.0</td>
 <td>1.0</td>
-<td>0.0</td>
-<td>2.0</td>
 <td>1.0</td>
-<td>2.0</td>
-<td>2.0</td>
-<td>1.0</td>
-<td>2.0</td>
-<td>2.0</td>
-<td>2.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>2.0</td>
 <td>0.0</td>
 <td>2.0</td>
-<td>2.0</td>
 <td>1.0</td>
 <td>2.0</td>
-<td>1.0</td>
 <td>2.0</td>
-<td>1.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>1.0</td>
 <td>2.0</td>
 <td>1.0</td>
 <td>2.0</td>
 <td>2.0</td>
-<td>1.0</td>
 <td>2.0</td>
-<td>1.0</td>
-<td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>2.0</td>
 <td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
 <td>1.0</td>
 <td>2.0</td>
 <td>1.0</td>
@@ -1286,8 +1298,9 @@ ul.auto-toc {
 <td>0.0</td>
 <td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>2.0</td>
-<td>0.0</td>
+<td>2.0</td>
 <td>1.0</td>
 <td>2.0</td>
 <td>1.0</td>
@@ -1314,37 +1327,16 @@ ul.auto-toc {
 <td>Nebraska</td>
 <td>6.5</td>
 <td>0.0</td>
-<td>1.5</td>
-<td>1.5</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>1.5</td>
-<td>1.5</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>1.5</td>
-<td>1.5</td>
-<td>0.0</td>
-<td>1.5</td>
-<td>1.5</td>
 <td>0.0</td>
 <td>1.5</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>1.5</td>
-<td>0.0</td>
-<td>0.0</td>
 <td>1.5</td>
 <td>0.0</td>
 <td>0.0</td>
-<td>1.5</td>
 <td>0.0</td>
-<td>1.5</td>
-<td>1.5</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -1356,12 +1348,34 @@ ul.auto-toc {
 <td>1.5</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.5</td>
 <td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>1.5</td>
 <td>0.0</td>
 <td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
 <td>1.5</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -1388,18 +1402,19 @@ ul.auto-toc {
 <td>Pittsbourgh</td>
 <td>3.5</td>
 <td>0.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>0.0</td>
-<td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
 <td>1.0</td>
 <td>2.0</td>
 <td>1.0</td>
@@ -1408,7 +1423,6 @@ ul.auto-toc {
 <td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
-<td>0.0</td>
 <td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -1424,18 +1438,19 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>1.0</td>
@@ -1469,16 +1484,6 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>0.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
-<td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -1486,6 +1491,16 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
 <td>0.0</td>
@@ -1509,7 +1524,8 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>1.0</td>
-<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
 <td>1.0</td>
@@ -1535,6 +1551,7 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
+<td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -1677,12 +1694,14 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>0.0</td>
 </tr>
 <tr><td>B2</td>
 <td>Deshaun Watson &gt; total yards than Baker Mayfield</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
+<td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -1825,12 +1844,14 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>0.0</td>
 </tr>
 <tr><td>B4</td>
 <td>Tide holds Sparty to less than 320 total yards</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
+<td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -1973,6 +1994,7 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>0.0</td>
 </tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
@@ -1980,18 +2002,19 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td><strong>6.0</strong></td>
-<td><strong>9.0</strong></td>
+<td><strong>11.5</strong></td>
 <td><strong>11.75</strong></td>
 <td><strong>5.0</strong></td>
 <td><strong>7.5</strong></td>
 <td><strong>7.5</strong></td>
 <td><strong>11.75</strong></td>
 <td><strong>14.25</strong></td>
+<td><strong>9.0</strong></td>
 <td><strong>10.25</strong></td>
 <td><strong>9.75</strong></td>
 <td><strong>12.0</strong></td>
 <td><strong>10.25</strong></td>
-<td><strong>4.75</strong></td>
+<td><strong>6.0</strong></td>
 <td><strong>11.5</strong></td>
 <td><strong>9.25</strong></td>
 <td><strong>6.5</strong></td>
@@ -1999,7 +2022,6 @@ ul.auto-toc {
 <td><strong>10.5</strong></td>
 <td><strong>11.0</strong></td>
 <td><strong>10.75</strong></td>
-<td><strong>7.5</strong></td>
 <td><strong>9.5</strong></td>
 <td><strong>6.5</strong></td>
 <td><strong>5.5</strong></td>
@@ -2016,7 +2038,7 @@ ul.auto-toc {
 <td><strong>9.5</strong></td>
 <td><strong>11.0</strong></td>
 <td><strong>11.25</strong></td>
-<td><strong>5.75</strong></td>
+<td><strong>8.0</strong></td>
 <td><strong>10.5</strong></td>
 <td><strong>10.25</strong></td>
 <td><strong>11.0</strong></td>
@@ -2026,8 +2048,9 @@ ul.auto-toc {
 <td><strong>9.5</strong></td>
 <td><strong>9.0</strong></td>
 <td><strong>9.5</strong></td>
+<td><strong>11.0</strong></td>
 <td><strong>11.5</strong></td>
-<td><strong>7.0</strong></td>
+<td><strong>14.5</strong></td>
 <td><strong>11.0</strong></td>
 <td><strong>9.25</strong></td>
 <td><strong>8.25</strong></td>
