--- a/bowl_pool/test/2015-2016/rankings.html
+++ b/bowl_pool/test/2015-2016/rankings.html
@@ -342,7 +342,7 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2015-12-29 17:48:04</em></div>
+<div class="line"><em>Last updated:  2015-12-29 18:09:09</em></div>
 <div class="line"><em>Last bowl scored:  QUICK LANE BOWL (Minnesota vs. Central Michigan)</em></div>
 </div>
 <div class="line-block">
@@ -373,7 +373,7 @@ ul.auto-toc {
 <div class="line">24. Spiker 10.5</div>
 <div class="line">24. KROB15 10.5</div>
 <div class="line">24. Hui Mama 10.5</div>
-<div class="line">24. Eclipse 10.5</div>
+<div class="line">24. <strong>Eclipse 10.5</strong></div>
 <div class="line">29. Lucky in 2016 10.25</div>
 <div class="line">29. Hou Dat 10.25</div>
 <div class="line">29. Cotton Headed Ninny Muggins 10.25</div>
@@ -405,7 +405,7 @@ ul.auto-toc {
 <div class="line">55. Billy Bad 2nd 7.5</div>
 <div class="line">55. Billy Bad 7.5</div>
 <div class="line">59. Team Aaron 7.25</div>
-<div class="line">59. Groodle 7.25</div>
+<div class="line">59. <strong>Groodle 7.25</strong></div>
 <div class="line">61. <strong>Mama Bear 7.0</strong></div>
 <div class="line">62. Magnitogorsk 6.75</div>
 <div class="line">63. Frog Man 4Ever 6.5</div>
