--- a/bowl_pool/2015-2016/rankings.html
+++ b/bowl_pool/2015-2016/rankings.html
@@ -342,79 +342,79 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2015-12-29 18:09:15</em></div>
-<div class="line"><em>Last bowl scored:  QUICK LANE BOWL (Minnesota vs. Central Michigan)</em></div>
+<div class="line"><em>Last updated:  2015-12-30 08:15:45</em></div>
+<div class="line"><em>Last bowl scored:  TEXAS BOWL (LSU vs. Texas Tech)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Santa Cruz Bill 14.5</div>
-<div class="line">2. BROCOHLI !!!!! 14.25</div>
-<div class="line">3. Yellowstone  13.0</div>
-<div class="line">4. HAM BEAST 12.75</div>
-<div class="line">5. GUAC BOYZ 12.0</div>
-<div class="line">5. Devil's Tower 12.0</div>
-<div class="line">5. Corgidawg 12.0</div>
-<div class="line">8. Blind Prognosticators 11.75</div>
-<div class="line">8. Beaver Believer 11.75</div>
-<div class="line">10. <strong>Rocket Surgeon 11.5</strong></div>
-<div class="line">10. GODIVA 11.5</div>
-<div class="line">10. Cowboy 11.5</div>
-<div class="line">10. Beach Bum 11.5</div>
-<div class="line">14. Texas Women 11.25</div>
-<div class="line">14. <strong>JessePinkman 11.25</strong></div>
-<div class="line">14. Going Bowling 11.25</div>
-<div class="line">17. Shi boa 11.0</div>
-<div class="line">17. POPO 11.0</div>
-<div class="line">17. LumberSexual 11.0</div>
-<div class="line">17. Jake &amp; the Neverland Pirates 11.0</div>
-<div class="line">17. EL CAPITAN 11.0</div>
-<div class="line">22. Opposite of Dad 10.75</div>
-<div class="line">22. FF  10.75</div>
-<div class="line">24. Trollotopia 10.5</div>
-<div class="line">24. Spiker 10.5</div>
-<div class="line">24. KROB15 10.5</div>
-<div class="line">24. Hui Mama 10.5</div>
-<div class="line">24. <strong>Eclipse 10.5</strong></div>
-<div class="line">29. Lucky in 2016 10.25</div>
-<div class="line">29. Hou Dat 10.25</div>
-<div class="line">29. Cotton Headed Ninny Muggins 10.25</div>
-<div class="line">29. <strong>Captain 10.25</strong></div>
-<div class="line">33. HALF DOME 10.0</div>
-<div class="line">34. Texsons 9.75</div>
-<div class="line">34. Clairvoyantsmith 9.75</div>
-<div class="line">36. Tan Mei yi&nbsp; 9.5</div>
-<div class="line">36. Pooh 9.5</div>
-<div class="line">36. Oregon Okie 9.5</div>
-<div class="line">36. Hunter 55 9.5</div>
-<div class="line">36. Go Frogs 9.5</div>
-<div class="line">36. FIELDS OF WHEAT 9.5</div>
-<div class="line">42. West Coast Bias 9.25</div>
-<div class="line">42. TTRedRaider09 9.25</div>
-<div class="line">42. Slave Darby 9.25</div>
-<div class="line">42. <strong>D-bo 9.25</strong></div>
-<div class="line">46. Perfect Spiral 9.0</div>
-<div class="line">46. BUBBA 9.0</div>
-<div class="line">48. Trojans 8.75</div>
-<div class="line">48. Texas State 8.75</div>
-<div class="line">50. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 8.25</div>
-<div class="line">50. Spartans 8.25</div>
-<div class="line">50. Gussysue 8.25</div>
-<div class="line">53. Julia 8.0</div>
-<div class="line">54. Sure Thing 7.75</div>
-<div class="line">55. The Force Awakens 7.5</div>
-<div class="line">55. <strong>Surf 7.5</strong></div>
-<div class="line">55. Billy Bad 2nd 7.5</div>
-<div class="line">55. Billy Bad 7.5</div>
-<div class="line">59. Team Aaron 7.25</div>
-<div class="line">59. <strong>Groodle 7.25</strong></div>
-<div class="line">61. <strong>Mama Bear 7.0</strong></div>
-<div class="line">62. Magnitogorsk 6.75</div>
-<div class="line">63. Frog Man 4Ever 6.5</div>
-<div class="line">63. Deakins 6.5</div>
-<div class="line">65. Yoda 6.25</div>
-<div class="line">66. COUGAR 6.0</div>
-<div class="line">66. Aggies 6.0</div>
-<div class="line">68. GMen 5.5</div>
-<div class="line">69. Bernie Trump 5.0</div>
+<div class="line">1. Santa Cruz Bill 17.75</div>
+<div class="line">2. BROCOHLI !!!!! 17.5</div>
+<div class="line">3. HAM BEAST 17.0</div>
+<div class="line">4. Beaver Believer 16.0</div>
+<div class="line">5. Lucky in 2016 15.5</div>
+<div class="line">6. GUAC BOYZ 15.25</div>
+<div class="line">7. Yellowstone  15.0</div>
+<div class="line">7. POPO 15.0</div>
+<div class="line">7. FF  15.0</div>
+<div class="line">7. Blind Prognosticators 15.0</div>
+<div class="line">11. Go Frogs 14.75</div>
+<div class="line">11. <strong>Eclipse 14.75</strong></div>
+<div class="line">13. <strong>Rocket Surgeon 14.5</strong></div>
+<div class="line">13. Cowboy 14.5</div>
+<div class="line">13. Beach Bum 14.5</div>
+<div class="line">16. Jake &amp; the Neverland Pirates 14.25</div>
+<div class="line">17. Opposite of Dad 14.0</div>
+<div class="line">17. LumberSexual 14.0</div>
+<div class="line">17. Devil's Tower 14.0</div>
+<div class="line">17. Corgidawg 14.0</div>
+<div class="line">21. FIELDS OF WHEAT 13.75</div>
+<div class="line">22. TTRedRaider09 13.5</div>
+<div class="line">22. Trollotopia 13.5</div>
+<div class="line">22. Spiker 13.5</div>
+<div class="line">22. KROB15 13.5</div>
+<div class="line">22. GODIVA 13.5</div>
+<div class="line">22. Cotton Headed Ninny Muggins 13.5</div>
+<div class="line">28. Shi boa 13.25</div>
+<div class="line">28. <strong>JessePinkman 13.25</strong></div>
+<div class="line">28. Hou Dat 13.25</div>
+<div class="line">28. Going Bowling 13.25</div>
+<div class="line">28. <strong>Captain 13.25</strong></div>
+<div class="line">33. EL CAPITAN 13.0</div>
+<div class="line">34. Texsons 12.75</div>
+<div class="line">34. Tan Mei yi&nbsp; 12.75</div>
+<div class="line">34. Hunter 55 12.75</div>
+<div class="line">34. Hui Mama 12.75</div>
+<div class="line">38. West Coast Bias 12.5</div>
+<div class="line">38. Team Aaron 12.5</div>
+<div class="line">38. Oregon Okie 12.5</div>
+<div class="line">41. Texas Women 12.25</div>
+<div class="line">42. HALF DOME 12.0</div>
+<div class="line">42. Clairvoyantsmith 12.0</div>
+<div class="line">42. BUBBA 12.0</div>
+<div class="line">45. The Force Awakens 11.75</div>
+<div class="line">45. Texas State 11.75</div>
+<div class="line">47. Billy Bad 11.5</div>
+<div class="line">48. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 11.25</div>
+<div class="line">48. Spartans 11.25</div>
+<div class="line">48. Slave Darby 11.25</div>
+<div class="line">51. Perfect Spiral 11.0</div>
+<div class="line">52. Sure Thing 10.75</div>
+<div class="line">52. Pooh 10.75</div>
+<div class="line">52. Billy Bad 2nd 10.75</div>
+<div class="line">55. Yoda 10.5</div>
+<div class="line">55. <strong>Surf 10.5</strong></div>
+<div class="line">57. Gussysue 10.25</div>
+<div class="line">57. <strong>Groodle 10.25</strong></div>
+<div class="line">57. <strong>D-bo 10.25</strong></div>
+<div class="line">57. COUGAR 10.25</div>
+<div class="line">61. <strong>Mama Bear 10.0</strong></div>
+<div class="line">62. Trojans 9.75</div>
+<div class="line">63. Frog Man 4Ever 9.5</div>
+<div class="line">64. Julia 9.25</div>
+<div class="line">65. Magnitogorsk 8.75</div>
+<div class="line">66. Deakins 8.5</div>
+<div class="line">67. Bernie Trump 8.0</div>
+<div class="line">67. Aggies 8.0</div>
+<div class="line">69. GMen 7.5</div>
 </div>
 </div>
 </body>
