--- a/bowl_pool/2015-2016/results.html
+++ b/bowl_pool/2015-2016/results.html
@@ -1546,6 +1546,306 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 </tr>
+<tr><td>15</td>
+<td>ARMED FORCES BOWL</td>
+<td>California</td>
+<td>Air Force</td>
+<td>7.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>16</td>
+<td>RUSSELL ATHLETIC BOWL</td>
+<td>Baylor</td>
+<td>North Carolina</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>17</td>
+<td>ARIZONA BOWL</td>
+<td>Colorado State</td>
+<td>Nevada</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+</tr>
+<tr><td>18</td>
+<td>TEXAS BOWL</td>
+<td>LSU</td>
+<td>Texas Tech</td>
+<td>7.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
 <tr><td>T1</td>
 <td>Total points for BOTH semifinal games</td>
 <td>&nbsp;</td>
@@ -2001,75 +2301,75 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>6.0</strong></td>
-<td><strong>11.5</strong></td>
-<td><strong>11.75</strong></td>
-<td><strong>5.0</strong></td>
-<td><strong>7.5</strong></td>
-<td><strong>7.5</strong></td>
-<td><strong>11.75</strong></td>
-<td><strong>14.25</strong></td>
-<td><strong>9.0</strong></td>
-<td><strong>10.25</strong></td>
-<td><strong>9.75</strong></td>
-<td><strong>12.0</strong></td>
-<td><strong>10.25</strong></td>
-<td><strong>6.0</strong></td>
-<td><strong>11.5</strong></td>
-<td><strong>9.25</strong></td>
-<td><strong>6.5</strong></td>
-<td><strong>12.0</strong></td>
-<td><strong>10.5</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>10.75</strong></td>
-<td><strong>9.5</strong></td>
-<td><strong>6.5</strong></td>
-<td><strong>5.5</strong></td>
-<td><strong>9.5</strong></td>
-<td><strong>11.5</strong></td>
-<td><strong>11.25</strong></td>
-<td><strong>7.25</strong></td>
-<td><strong>12.0</strong></td>
-<td><strong>8.25</strong></td>
-<td><strong>10.0</strong></td>
-<td><strong>12.75</strong></td>
-<td><strong>10.25</strong></td>
-<td><strong>10.5</strong></td>
-<td><strong>9.5</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>11.25</strong></td>
 <td><strong>8.0</strong></td>
-<td><strong>10.5</strong></td>
-<td><strong>10.25</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>6.75</strong></td>
-<td><strong>7.0</strong></td>
-<td><strong>10.75</strong></td>
-<td><strong>9.5</strong></td>
-<td><strong>9.0</strong></td>
-<td><strong>9.5</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>11.5</strong></td>
 <td><strong>14.5</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>9.25</strong></td>
-<td><strong>8.25</strong></td>
-<td><strong>10.5</strong></td>
-<td><strong>8.25</strong></td>
-<td><strong>7.75</strong></td>
-<td><strong>7.5</strong></td>
-<td><strong>9.5</strong></td>
-<td><strong>7.25</strong></td>
-<td><strong>8.75</strong></td>
-<td><strong>11.25</strong></td>
-<td><strong>9.75</strong></td>
-<td><strong>7.5</strong></td>
-<td><strong>8.75</strong></td>
-<td><strong>10.5</strong></td>
-<td><strong>9.25</strong></td>
-<td><strong>9.25</strong></td>
+<td><strong>16.0</strong></td>
+<td><strong>8.0</strong></td>
+<td><strong>11.5</strong></td>
+<td><strong>10.75</strong></td>
+<td><strong>15.0</strong></td>
+<td><strong>17.5</strong></td>
+<td><strong>12.0</strong></td>
+<td><strong>13.25</strong></td>
+<td><strong>12.0</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>13.5</strong></td>
+<td><strong>10.25</strong></td>
+<td><strong>14.5</strong></td>
+<td><strong>10.25</strong></td>
+<td><strong>8.5</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>14.75</strong></td>
 <td><strong>13.0</strong></td>
-<td><strong>6.25</strong></td>
+<td><strong>15.0</strong></td>
+<td><strong>13.75</strong></td>
+<td><strong>9.5</strong></td>
+<td><strong>7.5</strong></td>
+<td><strong>14.75</strong></td>
+<td><strong>13.5</strong></td>
+<td><strong>13.25</strong></td>
+<td><strong>10.25</strong></td>
+<td><strong>15.25</strong></td>
+<td><strong>10.25</strong></td>
+<td><strong>12.0</strong></td>
+<td><strong>17.0</strong></td>
+<td><strong>13.25</strong></td>
+<td><strong>12.75</strong></td>
+<td><strong>12.75</strong></td>
+<td><strong>14.25</strong></td>
+<td><strong>13.25</strong></td>
+<td><strong>9.25</strong></td>
+<td><strong>13.5</strong></td>
+<td><strong>15.5</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>8.75</strong></td>
+<td><strong>10.0</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>12.5</strong></td>
+<td><strong>11.0</strong></td>
+<td><strong>10.75</strong></td>
+<td><strong>15.0</strong></td>
+<td><strong>14.5</strong></td>
+<td><strong>17.75</strong></td>
+<td><strong>13.25</strong></td>
+<td><strong>11.25</strong></td>
+<td><strong>11.25</strong></td>
+<td><strong>13.5</strong></td>
+<td><strong>11.25</strong></td>
+<td><strong>10.75</strong></td>
+<td><strong>10.5</strong></td>
+<td><strong>12.75</strong></td>
+<td><strong>12.5</strong></td>
+<td><strong>11.75</strong></td>
+<td><strong>12.25</strong></td>
+<td><strong>12.75</strong></td>
+<td><strong>11.75</strong></td>
+<td><strong>9.75</strong></td>
+<td><strong>13.5</strong></td>
+<td><strong>13.5</strong></td>
+<td><strong>12.5</strong></td>
+<td><strong>15.0</strong></td>
+<td><strong>10.5</strong></td>
 </tr>
 </tbody>
 </table>
