--- a/bowl_pool/2015-2016/rankings.html
+++ b/bowl_pool/2015-2016/rankings.html
@@ -342,79 +342,79 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2015-12-30 08:15:45</em></div>
-<div class="line"><em>Last bowl scored:  TEXAS BOWL (LSU vs. Texas Tech)</em></div>
+<div class="line"><em>Last updated:  2015-12-31 08:36:02</em></div>
+<div class="line"><em>Last bowl scored:  HOLIDAY BOWL (USC vs. Wisconsin)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Santa Cruz Bill 17.75</div>
-<div class="line">2. BROCOHLI !!!!! 17.5</div>
-<div class="line">3. HAM BEAST 17.0</div>
-<div class="line">4. Beaver Believer 16.0</div>
-<div class="line">5. Lucky in 2016 15.5</div>
-<div class="line">6. GUAC BOYZ 15.25</div>
-<div class="line">7. Yellowstone  15.0</div>
-<div class="line">7. POPO 15.0</div>
-<div class="line">7. FF  15.0</div>
-<div class="line">7. Blind Prognosticators 15.0</div>
-<div class="line">11. Go Frogs 14.75</div>
-<div class="line">11. <strong>Eclipse 14.75</strong></div>
-<div class="line">13. <strong>Rocket Surgeon 14.5</strong></div>
-<div class="line">13. Cowboy 14.5</div>
-<div class="line">13. Beach Bum 14.5</div>
-<div class="line">16. Jake &amp; the Neverland Pirates 14.25</div>
-<div class="line">17. Opposite of Dad 14.0</div>
-<div class="line">17. LumberSexual 14.0</div>
-<div class="line">17. Devil's Tower 14.0</div>
-<div class="line">17. Corgidawg 14.0</div>
-<div class="line">21. FIELDS OF WHEAT 13.75</div>
-<div class="line">22. TTRedRaider09 13.5</div>
-<div class="line">22. Trollotopia 13.5</div>
-<div class="line">22. Spiker 13.5</div>
-<div class="line">22. KROB15 13.5</div>
-<div class="line">22. GODIVA 13.5</div>
-<div class="line">22. Cotton Headed Ninny Muggins 13.5</div>
-<div class="line">28. Shi boa 13.25</div>
-<div class="line">28. <strong>JessePinkman 13.25</strong></div>
-<div class="line">28. Hou Dat 13.25</div>
-<div class="line">28. Going Bowling 13.25</div>
-<div class="line">28. <strong>Captain 13.25</strong></div>
-<div class="line">33. EL CAPITAN 13.0</div>
-<div class="line">34. Texsons 12.75</div>
-<div class="line">34. Tan Mei yi&nbsp; 12.75</div>
-<div class="line">34. Hunter 55 12.75</div>
-<div class="line">34. Hui Mama 12.75</div>
-<div class="line">38. West Coast Bias 12.5</div>
-<div class="line">38. Team Aaron 12.5</div>
-<div class="line">38. Oregon Okie 12.5</div>
-<div class="line">41. Texas Women 12.25</div>
-<div class="line">42. HALF DOME 12.0</div>
-<div class="line">42. Clairvoyantsmith 12.0</div>
-<div class="line">42. BUBBA 12.0</div>
-<div class="line">45. The Force Awakens 11.75</div>
-<div class="line">45. Texas State 11.75</div>
-<div class="line">47. Billy Bad 11.5</div>
-<div class="line">48. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 11.25</div>
-<div class="line">48. Spartans 11.25</div>
-<div class="line">48. Slave Darby 11.25</div>
-<div class="line">51. Perfect Spiral 11.0</div>
-<div class="line">52. Sure Thing 10.75</div>
-<div class="line">52. Pooh 10.75</div>
-<div class="line">52. Billy Bad 2nd 10.75</div>
-<div class="line">55. Yoda 10.5</div>
-<div class="line">55. <strong>Surf 10.5</strong></div>
-<div class="line">57. Gussysue 10.25</div>
-<div class="line">57. <strong>Groodle 10.25</strong></div>
-<div class="line">57. <strong>D-bo 10.25</strong></div>
-<div class="line">57. COUGAR 10.25</div>
-<div class="line">61. <strong>Mama Bear 10.0</strong></div>
-<div class="line">62. Trojans 9.75</div>
-<div class="line">63. Frog Man 4Ever 9.5</div>
-<div class="line">64. Julia 9.25</div>
-<div class="line">65. Magnitogorsk 8.75</div>
-<div class="line">66. Deakins 8.5</div>
-<div class="line">67. Bernie Trump 8.0</div>
-<div class="line">67. Aggies 8.0</div>
-<div class="line">69. GMen 7.5</div>
+<div class="line">1. HAM BEAST 20.0</div>
+<div class="line">2. Santa Cruz Bill 19.75</div>
+<div class="line">3. Beaver Believer 19.0</div>
+<div class="line">4. BROCOHLI !!!!! 18.5</div>
+<div class="line">5. <strong>Eclipse 18.0</strong></div>
+<div class="line">5. Blind Prognosticators 18.0</div>
+<div class="line">7. <strong>Rocket Surgeon 17.75</strong></div>
+<div class="line">7. Go Frogs 17.75</div>
+<div class="line">9. Lucky in 2016 17.5</div>
+<div class="line">10. Yellowstone  17.25</div>
+<div class="line">10. Opposite of Dad 17.25</div>
+<div class="line">10. LumberSexual 17.25</div>
+<div class="line">10. Jake &amp; the Neverland Pirates 17.25</div>
+<div class="line">10. Corgidawg 17.25</div>
+<div class="line">15. POPO 17.0</div>
+<div class="line">15. FIELDS OF WHEAT 17.0</div>
+<div class="line">17. TTRedRaider09 16.5</div>
+<div class="line">17. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 16.5</div>
+<div class="line">17. Spiker 16.5</div>
+<div class="line">17. KROB15 16.5</div>
+<div class="line">21. GUAC BOYZ 16.25</div>
+<div class="line">21. Devil's Tower 16.25</div>
+<div class="line">21. <strong>Captain 16.25</strong></div>
+<div class="line">24. Hunter 55 16.0</div>
+<div class="line">24. FF  16.0</div>
+<div class="line">26. Team Aaron 15.75</div>
+<div class="line">26. Tan Mei yi&nbsp; 15.75</div>
+<div class="line">28. Trollotopia 15.5</div>
+<div class="line">28. Texas Women 15.5</div>
+<div class="line">28. GODIVA 15.5</div>
+<div class="line">28. Cowboy 15.5</div>
+<div class="line">28. Beach Bum 15.5</div>
+<div class="line">33. Shi boa 15.25</div>
+<div class="line">33. <strong>JessePinkman 15.25</strong></div>
+<div class="line">33. EL CAPITAN 15.25</div>
+<div class="line">33. Clairvoyantsmith 15.25</div>
+<div class="line">37. Texas State 15.0</div>
+<div class="line">37. BUBBA 15.0</div>
+<div class="line">39. <strong>Surf 14.75</strong></div>
+<div class="line">39. Hui Mama 14.75</div>
+<div class="line">41. West Coast Bias 14.5</div>
+<div class="line">41. Oregon Okie 14.5</div>
+<div class="line">41. <strong>Groodle 14.5</strong></div>
+<div class="line">41. Cotton Headed Ninny Muggins 14.5</div>
+<div class="line">45. Hou Dat 14.25</div>
+<div class="line">45. HALF DOME 14.25</div>
+<div class="line">45. Going Bowling 14.25</div>
+<div class="line">48. <strong>Mama Bear 14.0</strong></div>
+<div class="line">49. Yoda 13.75</div>
+<div class="line">49. Texsons 13.75</div>
+<div class="line">51. Spartans 13.5</div>
+<div class="line">51. <strong>D-bo 13.5</strong></div>
+<div class="line">51. Billy Bad 13.5</div>
+<div class="line">54. Slave Darby 13.25</div>
+<div class="line">54. Perfect Spiral 13.25</div>
+<div class="line">56. Pooh 13.0</div>
+<div class="line">56. Magnitogorsk 13.0</div>
+<div class="line">58. The Force Awakens 12.75</div>
+<div class="line">58. Sure Thing 12.75</div>
+<div class="line">60. Frog Man 4Ever 12.5</div>
+<div class="line">61. Gussysue 12.25</div>
+<div class="line">62. Billy Bad 2nd 12.0</div>
+<div class="line">63. COUGAR 11.25</div>
+<div class="line">64. Trojans 10.75</div>
+<div class="line">64. GMen 10.75</div>
+<div class="line">66. Julia 10.5</div>
+<div class="line">67. Deakins 9.5</div>
+<div class="line">68. Bernie Trump 9.0</div>
+<div class="line">68. Aggies 9.0</div>
 </div>
 </div>
 </body>
