--- a/bowl_pool/2015-2016/results.html
+++ b/bowl_pool/2015-2016/results.html
@@ -1846,6 +1846,306 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 </tr>
+<tr><td>19</td>
+<td>BIRMINGHAM BOWL</td>
+<td>Auburn</td>
+<td>Memphis</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>20</td>
+<td>BELK BOWL</td>
+<td>Mississippi St</td>
+<td>NC State</td>
+<td>5.5</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>21</td>
+<td>MUSIC CITY BOWL</td>
+<td>Louisville</td>
+<td>Texas A&amp;M</td>
+<td>4.5</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>22</td>
+<td>HOLIDAY BOWL</td>
+<td>USC</td>
+<td>Wisconsin</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>2.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>2.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+</tr>
 <tr><td>T1</td>
 <td>Total points for BOTH semifinal games</td>
 <td>&nbsp;</td>
@@ -2301,75 +2601,75 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>8.0</strong></td>
-<td><strong>14.5</strong></td>
-<td><strong>16.0</strong></td>
-<td><strong>8.0</strong></td>
-<td><strong>11.5</strong></td>
-<td><strong>10.75</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>17.5</strong></td>
-<td><strong>12.0</strong></td>
-<td><strong>13.25</strong></td>
-<td><strong>12.0</strong></td>
-<td><strong>14.0</strong></td>
-<td><strong>13.5</strong></td>
-<td><strong>10.25</strong></td>
-<td><strong>14.5</strong></td>
-<td><strong>10.25</strong></td>
-<td><strong>8.5</strong></td>
-<td><strong>14.0</strong></td>
-<td><strong>14.75</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>13.75</strong></td>
-<td><strong>9.5</strong></td>
-<td><strong>7.5</strong></td>
-<td><strong>14.75</strong></td>
-<td><strong>13.5</strong></td>
-<td><strong>13.25</strong></td>
-<td><strong>10.25</strong></td>
-<td><strong>15.25</strong></td>
-<td><strong>10.25</strong></td>
-<td><strong>12.0</strong></td>
-<td><strong>17.0</strong></td>
-<td><strong>13.25</strong></td>
-<td><strong>12.75</strong></td>
-<td><strong>12.75</strong></td>
-<td><strong>14.25</strong></td>
-<td><strong>13.25</strong></td>
-<td><strong>9.25</strong></td>
-<td><strong>13.5</strong></td>
+<td><strong>9.0</strong></td>
 <td><strong>15.5</strong></td>
-<td><strong>14.0</strong></td>
-<td><strong>8.75</strong></td>
-<td><strong>10.0</strong></td>
-<td><strong>14.0</strong></td>
-<td><strong>12.5</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>10.75</strong></td>
+<td><strong>19.0</strong></td>
+<td><strong>9.0</strong></td>
+<td><strong>13.5</strong></td>
+<td><strong>12.0</strong></td>
+<td><strong>18.0</strong></td>
+<td><strong>18.5</strong></td>
 <td><strong>15.0</strong></td>
+<td><strong>16.25</strong></td>
+<td><strong>15.25</strong></td>
+<td><strong>17.25</strong></td>
 <td><strong>14.5</strong></td>
-<td><strong>17.75</strong></td>
-<td><strong>13.25</strong></td>
 <td><strong>11.25</strong></td>
-<td><strong>11.25</strong></td>
+<td><strong>15.5</strong></td>
 <td><strong>13.5</strong></td>
-<td><strong>11.25</strong></td>
+<td><strong>9.5</strong></td>
+<td><strong>16.25</strong></td>
+<td><strong>18.0</strong></td>
+<td><strong>15.25</strong></td>
+<td><strong>16.0</strong></td>
+<td><strong>17.0</strong></td>
+<td><strong>12.5</strong></td>
 <td><strong>10.75</strong></td>
-<td><strong>10.5</strong></td>
-<td><strong>12.75</strong></td>
-<td><strong>12.5</strong></td>
-<td><strong>11.75</strong></td>
+<td><strong>17.75</strong></td>
+<td><strong>15.5</strong></td>
+<td><strong>14.25</strong></td>
+<td><strong>14.5</strong></td>
+<td><strong>16.25</strong></td>
 <td><strong>12.25</strong></td>
-<td><strong>12.75</strong></td>
-<td><strong>11.75</strong></td>
-<td><strong>9.75</strong></td>
-<td><strong>13.5</strong></td>
-<td><strong>13.5</strong></td>
-<td><strong>12.5</strong></td>
-<td><strong>15.0</strong></td>
+<td><strong>14.25</strong></td>
+<td><strong>20.0</strong></td>
+<td><strong>14.25</strong></td>
+<td><strong>14.75</strong></td>
+<td><strong>16.0</strong></td>
+<td><strong>17.25</strong></td>
+<td><strong>15.25</strong></td>
 <td><strong>10.5</strong></td>
+<td><strong>16.5</strong></td>
+<td><strong>17.5</strong></td>
+<td><strong>17.25</strong></td>
+<td><strong>13.0</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>17.25</strong></td>
+<td><strong>14.5</strong></td>
+<td><strong>13.25</strong></td>
+<td><strong>13.0</strong></td>
+<td><strong>17.0</strong></td>
+<td><strong>17.75</strong></td>
+<td><strong>19.75</strong></td>
+<td><strong>15.25</strong></td>
+<td><strong>13.25</strong></td>
+<td><strong>13.5</strong></td>
+<td><strong>16.5</strong></td>
+<td><strong>16.5</strong></td>
+<td><strong>12.75</strong></td>
+<td><strong>14.75</strong></td>
+<td><strong>15.75</strong></td>
+<td><strong>15.75</strong></td>
+<td><strong>15.0</strong></td>
+<td><strong>15.5</strong></td>
+<td><strong>13.75</strong></td>
+<td><strong>12.75</strong></td>
+<td><strong>10.75</strong></td>
+<td><strong>15.5</strong></td>
+<td><strong>16.5</strong></td>
+<td><strong>14.5</strong></td>
+<td><strong>17.25</strong></td>
+<td><strong>13.75</strong></td>
 </tr>
 </tbody>
 </table>
